fixed: hey text spacing

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1123,6 +1123,7 @@ section.talk2me
     display: block
     text-align: center
     margin-bottom: 80px
+    letter-spacing: 3px
     font-family: 'Poppins', serif
     +pad
       font-size: vw(12px,390px)
